tests/ui/coroutine/async-coroutine-issue-67158.stderr
error[E0727]: `async` coroutines are not yet supported
  --> $DIR/async-coroutine-issue-67158.rs:5:13
   |
LL |     async { yield print!(":C") };
   |             ^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0727`.
